syntax = "proto3";
package normalproto;

/* To generate the code using this file just type:
*  protoc --go_out=. analytics.proto
*/

import "google/protobuf/timestamp.proto";
option go_package = "proto/";

message AnalyticsRecord {
  string Host = 1;
  string Method = 2;
  string Path = 3;
  string RawPath = 4;
  int64 ContentLength = 5;
  string UserAgent = 6;
  int32 Day = 7;
  int32 Month = 8;
  int32 Year = 9;
  int32 Hour = 10;
  int32 ResponseCode = 11;
  string APIKey = 12;
  google.protobuf.Timestamp TimeStamp = 13;
  string APIVersion = 14;
  string APIName = 15;
  string APIID = 16;
  string OrgID = 17;
  int64 RequestTime = 18;
  Latency Latency = 19;
  string RawRequest = 20;
  string RawResponse = 21;
  string IPAddress = 22;
  GeoData Geo = 23;
  NetworkStats Network = 24;
  repeated string Tags = 25;
  string Alias = 26;
  bool TrackPath = 27;
  google.protobuf.Timestamp ExpireAt = 28;
  string OauthID = 29;
  string TimeZone = 30;
  string ApiSchema = 31;
  GraphQLStats GraphQLStats = 32;
}

message Latency {
  int64 Total = 1;
  int64 Upstream = 2;
}

message Country {
  string ISOCode = 1;
}

message City {
  map<string, string> Names = 1;
  uint32 GeoNameID = 2;
}

message Location {
  double Latitude = 1;
  double Longitude = 2;
  string TimeZone = 3;
}

message GeoData {
  Country Country = 1;
  City City = 2;
  Location Location = 3;
}

message NetworkStats {
  int64 OpenConnections = 1;
  int64 ClosedConnections = 2;
  int64 BytesIn = 3;
  int64 BytesOut = 4;
}

enum GraphQLOperations{
  OPERATION_UNKNOWN = 0;
  OPERATION_QUERY = 1;
  OPERATION_MUTATION = 2;
  OPERATION_SUBSCRIPTION = 3;
}

message GraphQLStats{
  bool IsGraphQL = 1;
  map<string, RepeatedFields> Types = 2;
  GraphQLOperations OperationType = 3;
  string Variables = 4;
  repeated string RootFields = 5;
  bool HasError = 6;
  repeated string GraphErrors = 7;
}

message RepeatedFields{
  repeated string fields = 1;
}
